--- a/about.html
+++ b/about.html
@@ -8,8 +8,28 @@ Final Project for CSCI 115 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="css/main.css">
+
+
 </head>
 <body>
+
+    <nav class="navbar">
+        <img id="navimg" src="/img/Echo 7 Logo and Text Horizontal 2 White.png" alt="Echo 7 Logo">
+        <ul>
+            <li><a href="index.html" class="menu_link">Home</a></li>
+            <li><a href="about.html" class="menu_link">About</a></li>
+            <li><a href="projects.html" class="menu_link">Projects</a></li>
+            <li><a href="blog.html" class="menu_link">Blog</a></li>
+            <li><a href="studio.html" class="menu_link">Studio</a></li>
+            <li><a href="contact.html" class="menu_link">Contact</a></li>
+        </ul>
+    </nav>
+
+
+    Pricing Table Here, 
+
     
 </body>
 </html>
