--- a/studio.html
+++ b/studio.html
@@ -8,8 +8,46 @@ Final Project for CSCI 115 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/studio.css">
+
 </head>
 <body>
+
+    <nav class="navbar">
+        <img id="navimg" src="/img/Echo 7 Logo and Text Horizontal 2 White.png" alt="Echo 7 Logo">
+        <ul>
+            <li><a href="index.html" class="menu_link">Home</a></li>
+            <li><a href="about.html" class="menu_link">About</a></li>
+            <li><a href="projects.html" class="menu_link">Projects</a></li>
+            <li><a href="blog.html" class="menu_link">Blog</a></li>
+            <li><a href="studio.html" class="menu_link">Studio</a></li>
+            <li><a href="contact.html" class="menu_link">Contact</a></li>
+        </ul>
+    </nav>
+
+    <br>
+
+    <div class="picture">
+
+        <img  id="studio1" class="image_left" src="/img/Studio Pictures/Echo-7 Studios 4.jpg">
+
+        <p class="text_right">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta blanditiis laborum id cumque fugit tenetur animi commodi dolore quibusdam atque. Inventore quidem asperiores, quia veniam non saepe. Deserunt adipisci, quaerat labore eos voluptatem illo perferendis sunt corrupti commodi repellendus hic aperiam minima magni soluta provident doloribus in tempore quam? Libero nam cum dicta culpa. Facere in deserunt animi consectetur doloribus esse molestiae voluptatibus sunt enim aut nisi, ducimus vero nam iste corporis praesentium explicabo ab commodi sequi! Iusto iure magni fugiat eligendi vel eos at officia harum excepturi libero aliquam officiis sed, asperiores, eum magnam maxime possimus delectus non velit inventore dolorum? Dicta, soluta quos in ea enim inventore natus a facilis optio provident maiores ratione vitae nisi ipsa
+
+        </p>
+    </div>
+
+    <div class="picture">
+
+        <p class="text_left">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta blanditiis laborum id cumque fugit tenetur animi commodi dolore quibusdam atque. Inventore quidem asperiores, quia veniam non saepe. Deserunt adipisci, quaerat labore eos voluptatem illo perferendis sunt corrupti commodi repellendus hic aperiam minima magni soluta provident doloribus in tempore quam? Libero nam cum dicta culpa. Facere in deserunt animi consectetur doloribus esse molestiae voluptatibus sunt enim aut nisi, ducimus vero nam iste corporis praesentium explicabo ab commodi sequi! Iusto iure magni fugiat eligendi vel eos at officia harum excepturi libero aliquam officiis sed, asperiores, eum magnam maxime possimus delectus non velit inventore dolorum? Dicta, soluta quos in ea enim inventore natus a facilis optio provident maiores ratione vitae nisi ipsa
+        </p>
+
+        <img  id="studio1"  class="image_right" src="/img/Studio Pictures/Echo-7 Studios 0.jpg">
+
+    </div>
     
 </body>
 </html>
