--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,55 @@ Final Project for CSCI 115 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/contact.css">
+
 </head>
 <body>
+
+    <nav class="navbar">
+        <img id="navimg" src="/img/Echo 7 Logo and Text Horizontal 2 White.png" alt="Echo 7 Logo">
+        <ul>
+            <li><a href="index.html" class="menu_link">Home</a></li>
+            <li><a href="about.html" class="menu_link">About</a></li>
+            <li><a href="projects.html" class="menu_link">Projects</a></li>
+            <li><a href="blog.html" class="menu_link">Blog</a></li>
+            <li><a href="studio.html" class="menu_link">Studio</a></li>
+            <li><a href="contact.html" class="menu_link">Contact</a></li>
+        </ul>
+    </nav>
+
+
+
+<br><br>
+
+<div class="contact_form">
+    <form>
+        <h3 id="contact_title">Contact Us</h3>
+        <br>
+
+        <label for="fname">First name:</label>
+        <input type="text" name="search" class="contact_field" placeholder="First Name">
+        <br> <br>
+
+        <label for="lname">Last name:</label>
+        <input type="text" name="search" class="contact_field" placeholder="Last Name">
+        <br><br>
+
+        <label for="Email">Email:</label>
+        <input type="text" name="search" class="contact_field" placeholder="Email Address">
+        <br> <br>
+
+        <label for="Message">Message:</label>
+        <input type="text" name="search" class="contact_field" placeholder="What would you like to say?">
+        <br> <br>
+
+
+
+    </form>
+</div>
+
     
 </body>
 </html>
