--- a/projects.html
+++ b/projects.html
@@ -8,8 +8,75 @@ Final Project for CSCI 115 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/projects.css">
+
+    <link rel="stylesheet" href="javascript/main.js">
+
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
 </head>
 <body>
-    
+
+    <div id="nav-placeholder">
+
+    </div>
+
+    <script type="text/javascript">
+
+        $(function navbar(){
+        $("#nav-placeholder").load("/nav.html");
+        });
+
+    </script>
+
+<br>
+<h2>The Studio Desk</h2>
+
+<div class="block"
+>
+    <div class="picture">
+
+        <img id="projects_img" src="img/Personal Pictures/Desk 1.JPG">
+
+        <p class="text_right">
+             With a passion for all things making, Austin deigned and built his own custom desk to fit his recording equipment. 
+                
+            <br><br>
+            On the left and right at industry standard 19" rack rails for conviniently mounting the most frequently used recording equipment, and the center space is designed to fit the studios centerpiece - a Tascam DM 3200 Hydbrid Console. 
+
+            For a list of just some of the equipment available at Echo 7, visit our 'About' page.
+
+        </p>
+
+    </div>
+</div>
+
+<div class="block"
+>
+    <div class="picture">
+
+        <img id="projects_img" src="img/Personal Pictures/Desk 2.JPG">
+
+        <p class="text_left">
+     The desk was built out of 5/8" Medium Density Fiberboard (MDF) and has 24 U of rack space, divided into four sections. There is an upper level where speakers can sit, and a lower bevel provides space for an armrest and keyboard. Underneath the desk are vaious cable management and power acomodations. 
+
+             <br><br>
+            A coat of black paint ties together the finished product, which always provides a proffesional impression to clients. 
+        </p>
+
+    </div>
+</div>
+
+<div class="picture">
+
+    <img class="image_center" src="img/Studio Pictures/Echo-7 Studios 9.jpg">
+
+</div>
+
+
+
+
 </body>
 </html>
