Added additional content and features
finalized content and added additional internal links and features

--- a/footer.html
+++ b/footer.html
@@ -1,30 +1,34 @@
-/* Austin Shouli 659 053 854
-Final Project for CSCI 115 */
+<!-- //Austin Shouli 659 053 854
+Final Project for CSCI 115// -->
+
 
 
 <nav class="footer">
 
-    <!-- <div id="byline">
+    <div id="byline">
         <p>Website By Austin Shouli / Echo 7 Studios</p>
-    </div>  -->
+    </div>
     
+
     <div id="footer_left">
          <ul>
-            <li>left</li>
-            <li>left</li>
-            <li>left</li>
+            <li><a href="index.html" class="menu_link">Home</a></li>
+            <li><a href="services.html" class="menu_link">Services</a></li>
+            <!-- <li><a href="projects.html" class="menu_link">Projects</a></li> -->
         </ul>
     </div>
 
     <div id="footer_right"> 
         <ul>
-            <li>right</li>
-            <li>right</li>
-            <li>right</li>
+        <!-- <li><a href="blog.html" class="menu_link">Blog</a></li> -->
+        <li><a href="studio.html" class="menu_link">Studio</a></li>
+        <li><a href="contact.html" class="menu_link">Contact</a></li>
         </ul>
     </div>
 
+
+
 </nav>
 
-
+ 
 
