--- a/nav.html
+++ b/nav.html
@@ -3,7 +3,7 @@
     <ul>
         <li><a href="index.html" class="menu_link">Home</a></li>
         <li><a href="services.html" class="menu_link">Services</a></li>
-        <li><a href="projects.html" class="menu_link">Projects</a></li>
+        <!-- <li><a href="projects.html" class="menu_link">Projects</a></li> -->
         <li><a href="blog.html" class="menu_link">Blog</a></li>
         <li><a href="studio.html" class="menu_link">Studio</a></li>
         <li><a href="contact.html" class="menu_link">Contact</a></li>
