--- a/studio.html
+++ b/studio.html
@@ -38,7 +38,11 @@ Final Project for CSCI 115 -->
         <img  id="studio1" class="image_left" src="/img/Studio Pictures/Echo-7 Studios 4.jpg">
 
         <p class="text_right">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta blanditiis laborum id cumque fugit tenetur animi commodi dolore quibusdam atque. Inventore quidem asperiores, quia veniam non saepe. Deserunt adipisci, quaerat labore eos voluptatem illo perferendis sunt corrupti commodi repellendus hic aperiam minima magni soluta provident doloribus in tempore quam? Libero nam cum dicta culpa. Facere in deserunt animi consectetur doloribus esse molestiae voluptatibus sunt enim aut nisi, ducimus vero nam iste corporis praesentium explicabo ab commodi sequi! Iusto iure magni fugiat eligendi vel eos at officia harum excepturi libero aliquam officiis sed, asperiores, eum magnam maxime possimus delectus non velit inventore dolorum? Dicta, soluta quos in ea enim inventore natus a facilis optio provident maiores ratione vitae nisi ipsa
+          Located in the scenic Harewood neighbourhood of Nanaimo, BC, the surrounding Vancouver Island wilderness provides a scerene and insirational backdrop to recording your music. 
+          <br><br>
+          Echo-7 features the capacity to record a full-band simultaneously, and offers a wide variety of instruments to help bring inspiration to your projects. 
+            <br><br>
+          From guitars to synthesizers, and even a electronic drum kit, there is amble equipment to bring your songs to life.
 
         </p>
     </div>
@@ -46,7 +50,14 @@ Final Project for CSCI 115 -->
     <div class="picture">
 
         <p class="text_left">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta blanditiis laborum id cumque fugit tenetur animi commodi dolore quibusdam atque. Inventore quidem asperiores, quia veniam non saepe. Deserunt adipisci, quaerat labore eos voluptatem illo perferendis sunt corrupti commodi repellendus hic aperiam minima magni soluta provident doloribus in tempore quam? Libero nam cum dicta culpa. Facere in deserunt animi consectetur doloribus esse molestiae voluptatibus sunt enim aut nisi, ducimus vero nam iste corporis praesentium explicabo ab commodi sequi! Iusto iure magni fugiat eligendi vel eos at officia harum excepturi libero aliquam officiis sed, asperiores, eum magnam maxime possimus delectus non velit inventore dolorum? Dicta, soluta quos in ea enim inventore natus a facilis optio provident maiores ratione vitae nisi ipsa
+            After achieiving a Diploma of Digital Audio Production from The Southern Alberta Institute of Technology in 2016, Austin Shouli founded Echo-7 Recording Studios, and began recording for local Calgary artists in his home studio. 
+           <br><br>
+           Our list of equipment includes: 
+         <ul>
+             <li class="gear_list"><a href="https://tascam.com/us/product/dm-3200/top">Tascam DM 3200 Hybrid Recording Console</a></li>
+             <li class="gear_list"><a href="https://www.avalondesign.com/vt747sp.html">Avalon 747-SP Mix Bus Processor</a></li>
+             <li class="gear_list"><a href="https://www.adam-audio.com/en/ax-series/a8x/">Adam A8X Studio Monitors</a></li>
+         </ul>
         </p>
 
         <img  id="studio1"  class="image_right" src="/img/Studio Pictures/Echo-7 Studios 0.jpg">
