trying to fix images on github pages
changed .JPG to jpg to try and fix images not displaying issue on github pages

--- a/sidebar.html
+++ b/sidebar.html
@@ -1,3 +1,6 @@
+<!-- Austin Shouli 659 053 854
+Final Project for CSCI 115 -->
+
 <div class="sidebar">
     <ul>    
         <lh>Recent Posts</lh>
