--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Final Project for CSCI 115 -->
     <script type="text/javascript">
     
         $(function navbar(){
-        $("#nav-placeholder").load("/nav.html");
+        $("#nav-placeholder").load("nav.html");
         });
     
     </script>
