--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@ Final Project for CSCI 115 -->
 
     <link rel="stylesheet" href="javascript/main.js">
 
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 </head>
 <body>
