--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Final Project for CSCI 115 -->
 
 <!-- <script src="https://code.jquery.com/jquery-1.10.2.js"></script> -->
 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 </head>
 <body>
