--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@ Final Project for CSCI 115 -->
     <link rel="stylesheet" href="css/services.css">
     <link rel="stylesheet" href="javascript/main.js">
 
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 
 </head>
