--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Final Project for CSCI 115 -->
 
     <div class="picture">
     
-        <img  id="index_img" class="image_left" src="/img/Personal Pictures/Dogs 3.jpg">
+        <img  id="index_img" class="image_left" src="img/dog3.png" alt="Austin and a Dog">
 
         <p class="text_center" width="10%">
             Austin is the founder and sole-proprietor of Echo 7 Studios. Specializing in Audio Production, Marketing, and Communications, Austin has helped artists and small buisness's across Western Canada to realize their projects big and small. <br><br>
@@ -86,7 +86,7 @@ Final Project for CSCI 115 -->
 <script type="text/javascript">
 
     $(function navbar(){
-    $("#footer-placeholder").load("/footer.html");
+    $("#footer-placeholder").load("footer.html");
     });
 
 </script>
