--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@ Final Project for CSCI 115 -->
     <script type="text/javascript">
 
         $(function navbar(){
-        $("#nav-placeholder").load("/nav.html");
+        $("#nav-placeholder").load("nav.html");
         });
 
     </script>
@@ -41,7 +41,7 @@ Final Project for CSCI 115 -->
 <script type="text/javascript">
 
     $(function navsidebar(){
-    $("#sidebar-placeholder").load("/sidebar.html");
+    $("#sidebar-placeholder").load("sidebar.html");
     });
 
 </script>
@@ -226,7 +226,7 @@ Final Project for CSCI 115 -->
 <script type="text/javascript">
 
     $(function navbar(){
-    $("#footer-placeholder").load("/footer.html");
+    $("#footer-placeholder").load("footer.html");
     });
 
 </script>
