--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@ Final Project for CSCI 115 -->
     <script type="text/javascript">
     
         $(function navbar(){
-        $("#nav-placeholder").load("/nav.html");
+        $("#nav-placeholder").load("nav.html");
         });
     
     </script>
