--- a/services.html
+++ b/services.html
@@ -26,7 +26,7 @@ Final Project for CSCI 115 -->
     <script type="text/javascript">
     
         $(function navbar(){
-        $("#nav-placeholder").load("/nav.html");
+        $("#nav-placeholder").load("nav.html");
         });
     
     </script>
@@ -148,7 +148,7 @@ Final Project for CSCI 115 -->
 <script type="text/javascript">
 
     $(function navbar(){
-    $("#footer-placeholder").load("/footer.html");
+    $("#footer-placeholder").load("footer.html");
     });
 
 </script>
