Working through validator
On Blog page. fixed image names with spaces. added alt desc to all image

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ Final Project for CSCI 115 -->
     <style>
     </style>
 
-    <script type="text/javascript" href="javascript/main.js"></script>
-    <!-- <script type="text/javascript" href="javascript/jquery-3.6.0.min.js"></script> -->
+    <!-- <script type="text/javascript" src="javascript/main.js"></script> -->
+    <script type="text/javascript" src="javascript/jquery-3.6.0.js"></script>
 
     <!-- <script src="https://code.jquery.com/jquery-1.10.2.js"></script> -->
 
@@ -60,7 +60,7 @@ Final Project for CSCI 115 -->
     
         <img  id="index_img" class="image_left" src="img/dog3.png" alt="Austin and a Dog">
 
-        <p class="text_center" width="10%">
+        <p class="text_center">
             Austin is the founder and sole-proprietor of Echo 7 Studios. Specializing in Audio Production, Marketing, and Communications, Austin has helped artists and small buisness's across Western Canada to realize their projects big and small. <br><br>
 
             Austin holds a certificate in Digital Audio Production from The Southern Alberta Institute of Technology (SAIT), and a Diploma of Journalism from SAIT. After receving his education, Austin went on to work for Live Nation Canada as a Production Assistant. <br><br>
