--- a/nav.html
+++ b/nav.html
@@ -2,7 +2,7 @@
 Final Project for CSCI 115 -->
 
 <nav class="navbar">
-    <a href="index.html"><img id="navimg" src="img/Echo 7 Logo and Text Horizontal 2 White.png" alt="Echo 7 Logo"></a>
+    <a href="index.html"><img id="navimg" src="img/echo7_logo_horz_white.png" alt="Echo 7 Logo"></a>
     <ul>
         <li><a href="index.html" class="menu_link">Home</a></li>
         <li><a href="services.html" class="menu_link">Services</a></li>
