--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@ Final Project for CSCI 115 -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/contact.css">
 
-    <link rel="stylesheet" href="javascript/main.js">
+    <script type="text/javascript" src="javascript/main.js"></script>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
