--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@ Final Project for CSCI 115 -->
 
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/services.css">
-    <link rel="stylesheet" href="javascript/main.js">
+    <script type="text/javascript" src="javascript/main.js"></script>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
@@ -37,7 +37,7 @@ Final Project for CSCI 115 -->
 
 <div class="price_block">
 
-    <table id="price_table">
+    <table class="price_table">
         <caption>Music Production Services</caption>
         <tr>
             <th>Service</th>
@@ -69,7 +69,7 @@ Final Project for CSCI 115 -->
 
 <div class="price_block">
 
-    <table id="price_table">
+    <table class="price_table">
         <caption>Comercial Audio  Services</caption>
         <tr>
             <th>Service</th>
@@ -101,7 +101,7 @@ Final Project for CSCI 115 -->
 
 <div class="price_block">
 
-    <table id="price_table">
+    <table class="price_table">
         <caption>Marketing Services</caption>
         <tr>
             <th>Service</th>
@@ -133,7 +133,7 @@ Final Project for CSCI 115 -->
 
 
 
-<div class="contact_button" class="menu_link">
+<div class="contact_button menu_link">
     <a href="/contact.html">Contact Us</a>
 </div>
     
