--- a/studio.html
+++ b/studio.html
@@ -12,7 +12,7 @@ Final Project for CSCI 115 -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/studio.css">
 
-    <link rel="stylesheet" href="javascript/main.js">
+    <script type="text/javascript" src="javascript/main.js"></script>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
@@ -35,7 +35,7 @@ Final Project for CSCI 115 -->
 
     <div class="picture">
 
-        <img  id="studio1" class="image_left" src="img/Studio Pictures/Echo-7 Studios 4.jpg">
+        <img  id="studio1" class="image_left" src="img/echo7_5.jpg" alt="The Control Room at Echo 7 Studios">
 
         <p class="text_right">
           Located in the scenic Harewood neighbourhood of Nanaimo, BC, the surrounding Vancouver Island wilderness provides a scerene and insirational backdrop to recording your music. 
@@ -60,7 +60,7 @@ Final Project for CSCI 115 -->
          </ul>
         </p>
 
-        <img  id="studio1"  class="image_right" src="img/Studio Pictures/Echo-7 Studios 0.jpg">
+        <img  id="studio1"  class="image_right" src="img/echo7_4.jpg" alt="The Sign on the Dooor at Echo 7 Studios">
 
     </div>
     
