--- a/contact.html
+++ b/contact.html
@@ -48,11 +48,11 @@ Final Project for CSCI 115 -->
         <input type="text" name="search" class="contact_field" id="lname" placeholder="Last Name">
         <br><br>
 
-        <label for="Email">Email: </label>
+        <label for="email">Email: </label>
         <input type="text" name="search" class="contact_field" id="email" placeholder="Email Address">
         <br> <br>
 
-        <label for="Message">Message: </label>
+        <label for="msg">Message: </label>
         <input type="text" name="search" class="contact_field" id="msg" placeholder="What would you like to say?">
         <br> <br>
 
