--- a/services.html
+++ b/services.html
@@ -134,7 +134,7 @@ Final Project for CSCI 115 -->
 
 
 <div class="contact_button menu_link">
-    <a href="/contact.html">Contact Us</a>
+    <a href="contact.html">Contact Us</a>
 </div>
     
 
