index contact button
added contact button to index

--- a/services.html
+++ b/services.html
@@ -133,12 +133,13 @@ Final Project for CSCI 115 -->
 
 
 
-<div class="contact_button menu_link">
+<div id="contact_button" class="menu_link">
     <a href="contact.html">Contact Us</a>
 </div>
     
 
 <br><br><br>
+
 
 
 <div id="footer-placeholder">
@@ -152,8 +153,6 @@ Final Project for CSCI 115 -->
     });
 
 </script>
-
-    
 
 </body>
 </html>
