--- a/index.html
+++ b/index.html
@@ -69,18 +69,25 @@ Final Project for CSCI 115 -->
 
             When the global pandemic of 2020 began, Austin shifted his talents back towards Marking, Communications, and Audio Production. Constructing, and then working out of his home studio, Austin worked with local Calgary musicians and buisness. In April of 2021 Austin relocated to Nanaimo, BC to focus on recording and to pursue his latest passion - computer science.
         </p>
-    
     </div>
 
-    <br> <br>
+</div>
 
+<div class="contact_block">
+
+    <p class="text_center">
+        To learn more about our marketing and recording services, please visit the link below and contact us!
+    </p>
+
+    <div id="contact_button" class="menu_link">
+        <a href="contact.html">Contact Us</a>
+    </div>
 
 </div>
 
 
-<br>
-<br>
-
+<!-- 
+<div class="whitespace"></div> -->
 
 <div id="footer-placeholder">
 
